Update 'hpngs6qwp-python' component image to: quay.io/rhtap_qe/rhtap-qe-python:b4a46cf7946b45f0e29aab89ea5ef0ffa4a6bc64@sha256:1858700ea88545db56955eca6f99b0e38fdae264d5e3832d98f4fbaa21730056

--- a/components/hpngs6qwp-python/overlays/development/deployment-patch.yaml
+++ b/components/hpngs6qwp-python/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: hpngs6qwp-python
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-python:b4a46cf7946b45f0e29aab89ea5ef0ffa4a6bc64@sha256:1858700ea88545db56955eca6f99b0e38fdae264d5e3832d98f4fbaa21730056
+          name: container-image
